Bekerült az új bekezdés az index.html ben

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Portfólio</h1>
     <p>Ez egy paragrafus bekezdés</p>
+    <p>Ez egy másik bekezdés ami módosúlt.</p>
 </body>
 </html>
