--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Portfólio</h1>
     <p>Ez egy paragrafus bekezdés</p>
-    <p>Ez egy másik bekezdés ami módosúlt.</p>
+    <p>Ez egy másik bekezdés ami módosúlt. Egy sorba teszükk</p>
 </body>
 </html>
